Fix reg. prof. & blog

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -55,6 +55,7 @@
         <p>
           <a href="mailto:atendimento@eftclub.com">atendimento@eftclub.com</a>
         </p>
+        
       </section>
 
       <section class="logo">
@@ -71,6 +72,7 @@
       </section>
 
       <section class="aviso_legal">
+        <p>Registro Profissional: <strong> CRTH-BR 17974</strong></p>
         <p>
           Aviso Legal: As Terapias Holísticas e Integrativas são complementares
           à medicina alopática, e não devem substituir nenhuma consulta e/ou
